# ai-accounting-lite

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt  start.sh
alembic/: env.py
alembic/versions/: 5bec7a80aaae_initial.py
app/: main.py
app/core/: config.py  database.py  dependencies.py
app/modules/ledger/application/: interfaces.py  use_cases.py
app/modules/ledger/domain/: entities.py
app/modules/ledger/infrastructure/: models.py  repositories.py
app/modules/ledger/presentation/: routers.py  schemas.py
app/modules/receipts/application/: receipt_service.py
app/modules/receipts/domain/: models.py
app/modules/receipts/infrastructure/: ai_parser.py  file_storege.py  models.py  ocr_service.py  repositories.py
app/modules/receipts/presentation/: routers.py  schemas.py
scripts/: seed_accounts.py
