[project]
name = "ai-accounting-lite"
version = "0.1.0"
description = "AI-Native Accounting with Ollama"
authors = [
    {name = "Octavian Doncea"}
]
requires-python = "^3.13"
dependencies = [
    "fastapi (>=0.133.0,<0.134.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "sqlalchemy (>=2.0.47,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "celery (>=5.6.2,<6.0.0)",
    "redis (>=7.2.0,<8.0.0)",
    "paddlepaddle (>=3.3.0,<4.0.0)",
    "paddleocr (>=3.4.0,<4.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "ollama (>=0.6.1,<0.7.0)",
    "supabase (>=2.28.0,<3.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "ruff (>=0.15.2,<0.16.0)"
]
